# aries-bbssignatures-rs

./: CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md
.github/: settings.yml
.github/workflows/: build.yml
src/: errors.rs  issuer.rs  keys.rs  lib.rs  macros.rs  pok_sig.rs  pok_vc.rs  prover.rs  signature.rs  verifier.rs
tests/: bbs.rs
